--- a/web/pages/usuario_perfil.xhtml
+++ b/web/pages/usuario_perfil.xhtml
@@ -29,6 +29,7 @@
                                 var="user" 
                                 itemLabel="#{user.nombreUsuario}" 
                                 itemValue="#{user}" 
+                                converter="converterPickList"
                                 >
                         <f:facet name="sourceCaption">Usuarios</f:facet>
                         <f:facet name="targetCaption">Usuario por Perfil</f:facet>
